split string into array in cities

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -47,7 +47,7 @@
     </p>
     <p>
       <label for="Cities">Cities:</label>
-      <input type="text" id="cities" name="country[cities]"  value="<%= country.cities %>">
+      <input type="text" id="cities" name="cities"  value="<%= country.cities %>">
     </p>
     <p>
       <input type="submit">
