--- a/views/new.ejs
+++ b/views/new.ejs
@@ -53,7 +53,7 @@
         <p>
           <div class="form-group">
             <label for="image">Cities:</label>
-            <input type="text" id="image" name="country[cities]">
+            <input type="text" id="image" name="cities">
           </div>
         </p>
         <p>
