--- a/views/new.ejs
+++ b/views/new.ejs
@@ -9,7 +9,7 @@
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
   
-  <link rel="stylesheet" href="/style_sheets/style.css">
+  <link rel="stylesheet" href="style.css">
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -19,7 +19,7 @@
 <div class="navbar navbar-default">
   <div class="container">
     <div class="row">
-      <div class="col-xs-6 col-xs-offset-3">
+      <div class="col-xs-4 col-xs-offset-4">
         <div class="btn-group" role="group">
           <a href="/"><button type="button" class="btn btn-default">Home</button></a>
           <a href="/new"><button type="button" class="btn btn-default">Add Country</button></a>
